--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.activemq.password=admin
 spring.activemq.packages.trust-all=true
 
 input.queue=myqueue
+string.queue=stringqueue
+
+server.port=7001
 
